# augmented-python-template-main

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  IMPLEMENTATION_REPORT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SNAPSHOT.md  copier.yml  copier.yml.backup  pyproject.toml  renovate.json
.shared/moai/: README.md
.shared/moai/workflows/: plan.md  run.md  sync.md
.shared/workflow/: README.md
.shared/workflow/docs/: patterns.md  pitfalls.md
.shared/workflow/workflows/: implement.md  plan.md
template/: .dockerignore  .env.dev.jinja  .gitignore.jinja  .gitlab-ci.yml.jinja  .hadolint.yaml  .pre-commit-config.yaml  CLAUDE.md.jinja  CLAUDE.md.jinja.backup  CODEOWNERS.jinja  Dockerfile  README.md.jinja  compose.yml.jinja  conftest.py.jinja  example.compose.override.yml.jinja  example.env.dev.override.jinja  manage.py  pyproject.toml  renovate.json  {% if include_database %}alembic.ini{% endif %}
template/.claude/: settings.json.jinja
template/.claude/agents/moai/: manager-ddd.md  manager-docs.md  manager-spec.md
template/.claude/commands/: complete.md  finish.md  implement.md  plan.md  refactor.md  retro.md  run.md  sync.md  wrap.md
template/.claude/rules/: README.md
template/.gitlab/: REPOOWNERS  assignees.py  post_changelog.py  section-end  section-start
template/.gitlab/issue_templates/: improvement_story.md  job_story.md  problem_story.md  user_story.md
template/.moai/config/sections/: quality.yaml  user.yaml.jinja
template/.workflow/config/sections/: language.yaml
template/helm/: .helmignore  Chart.yaml.jinja  values-production.yaml.jinja  values-staging.yaml.jinja  values.yaml.jinja
template/helm/dashboards/: {{ service_name }}.json.jinja
template/helm/templates/: dashboards.yaml.jinja  prometheus-rules.yaml
template/holo/: README.md  ctx.py  ctx_test.py  health.py  health_test.py  logging.py  segment_test.py  utils.py
template/holo/adapters/http/: exceptions.py  openapi.py  schemas.py  utils.py.jinja
template/holo/adapters/{% if use_nats %}nats{% endif %}/: events.py  factories.py  handler_utils.py.jinja
template/holo/commands/: command.py.jinja
template/holo/config/: __init__.py.jinja  base.py  config.py.jinja  logging.py.jinja  openapi.py.jinja  segment.py  service.py.jinja  {% if include_database %}database.py{% endif %}  {% if include_redis %}redis.py{% endif %}  {% if use_nats %}nats.py{% endif %}  {% if use_resgate %}resclient.py{% endif %}
template/holo/core/: entities.py  exceptions.py.jinja  usecases.py.jinja
template/holo/data/: connectors.py.jinja  factories.py  models.py  utils.py
template/holo/opentelemetry/: processors.py
template/holo/opentelemetry/instrumentation/: {% if use_nats %}nats.py{% endif %}
template/holo/segment/: middleware.py
template/holo/testing/: assertions.py  fixtures.py.jinja
template/holo/{% if use_nats %}nats{% endif %}/: client.py  exceptions.py  jetstream.py  metrics.py  objects.py  plain.py  protocol.py
template/holo/{% if use_resgate %}resclient{% endif %}/: client.py  factories.py  handlers.py  models.py
template/scripts/: fake_jwt.py  generate_badges.py  runserver.py.jinja  verify_project.sh
template/service/: injector.py.jinja  router.py  server.py.jinja  {% if use_nats %}nats.py{% endif %}.jinja
template/service/adapters/: {% if use_nats %}conftest.py{% endif %}.jinja
template/service/adapters/{% if use_nats %}nats{% endif %}/{% if include_database %}flush_db{% endif %}/: events.py  handlers.py
template/service/commands/: {% if include_database %}flushdb.py{% endif %}
template/service/core/: usecases.py.jinja
template/service/lifespan/: __init__.py  development.py.jinja  production.py.jinja  staging.py
template/service/monitoring/: endpoints.py.jinja  {% if include_database %}middleware.py{% endif %}  {% if include_database %}sql.py{% endif %}
template/service/monitoring/tests/: test_endpoints.py.jinja
template/{% if include_database %}migrations{% endif %}/: env.py  script.py.mako
template/{% if include_database %}migrations{% endif %}/tests/: conftest.py  test_alembic.py
