[project]
authors = [{email = "dev@voys.nl", name = "Voys"}]
dependencies = [
    "codeowners==0.8.0",
    "conventional-pre-commit==4.3.0",
    "copier==9.11.3",
    "pre-commit==4.5.1",
    "requests==2.32.5"
]
description = "The template used for setting up a new python service"
name = "python-template"
requires-python = "~=3.14.0"
version = "0.1.0"

[tool.tomlsort]
sort_inline_arrays = true
sort_inline_tables = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
